<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree">My Nanodegree Apps!</string>
    <string name="spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="scoresAppButton">SCORES APP</string>
    <string name="xyzButton">XYZ BUTTON</string>
    <string name="libraryButton">LIBRARY APP</string>
    <string name="buildBiggerButton">BUILD IT BIGGER</string>
</resources>
