<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="#000000"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:baselineAligned="false"
    android:background="#004D40"
    android:id="@+id/mainLinearLayout">



    <TextView android:text="@string/nanodegree" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:padding="30dp"
        android:typeface="sans"
        android:textStyle="bold"
        android:textColor="@color/abc_primary_text_material_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/spotStreamerButton"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:background="#FFD54F"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="sendToToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoresAppButton"
        android:id="@+id/scoresAppButton"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="#00BFA5"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="sendToToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buildBiggerButton"
        android:id="@+id/buildBiggerButton"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="#0091EA"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="sendToToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libraryButton"
        android:id="@+id/libraryAppButton"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="#651FFF"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="sendToToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyzButton"
        android:id="@+id/xyzAppButton"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="#0D47A1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="sendToToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CAPSTONE: MY OWN APP"
        android:id="@+id/capstonAppButton"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="#ffd32f2f"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="sendToToast"/>

</LinearLayout>

</ScrollView>